// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCardTitle customize 1`] = `
<div>
  <h3
    class="card-title bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CCardTitle component 1`] = `
<div>
  <h5
    class="card-title"
  >
    Test
  </h5>
</div>
`;
